--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -3,18 +3,18 @@
 {% block content %}
 
 <div class="container">
-<div class="row">
-    <!-- Error image -->
-    <div class="col s12 center-align">
-        <img class="error-image" src="/static/images/404.jpg" alt="404 Image">
+    <div class="row">
+        <!-- Error image -->
+        <div class="col s12 center-align">
+            <img class="error-image" src="/static/images/404.jpg" alt="404 Image" />
+        </div>
+        <!-- Error content -->
+        <div class="col s12 center-align">
+            <h4>It seems that you have taken a wrong turn!</h4>
+            <h5>Would you like us to take you home?</h5>
+            <a href="{{ url_for('home') }}" class="waves-effect waves-light btn green darken-3" aria-label="Home">Home</a>
+        </div>
     </div>
-    <!-- Error content -->
-    <div class="col s12 center-align">
-        <h4>It seems that you have taken a wrong turn!</h4>
-        <h5>Would you like us to take you home?</h5>
-        <a href="{{ url_for('home') }}" class="waves-effect waves-light btn green darken-3"  aria-label="Home">Home</a>
-    </div>
-</div>
 </div>
 
 {% endblock %}
