--- a/templates/index.html
+++ b/templates/index.html
@@ -24,9 +24,9 @@
     <!-- Seed Carousel - Code for the carousel was found at https://materializecss.com/carousel.html -->
     <h4 class="center-align profile-heading">Get Growing</h4>
     <div class="carousel carousel-slider">
-    {% for seed in seeds %}
-        <a class="carousel-item" href="{{ url_for('get_seed', seed_id=seed._id) }}"><img class="carousel-images" src="{{ seed.seed_image }}" alt="hero-image"></a>
-    {% endfor %}
+        {% for seed in seeds %}
+        <a class="carousel-item" href="{{ url_for('get_seed', seed_id=seed._id) }}"><img class="carousel-images" src="{{ seed.seed_image }}" alt="hero-image" /></a>
+        {% endfor %}
     </div>
 </div>
 
@@ -35,21 +35,21 @@
     <h4 class="center-align profile-heading">Recently Added</h4>
     <div class="row">
         {% for recent in recents %}
-            <div class="col s12 m4 flex">
-                <a href="{{ url_for('get_seed', seed_id=recent._id) }}">
+        <div class="col s12 m4 flex">
+            <a href="{{ url_for('get_seed', seed_id=recent._id) }}">
                 <div class="card medium s4 hoverable">
                     <!-- Image overlay showing the name of the seed -->
                     <div class="overlay-card"><h4>{{ recent.seed_name }}</h4></div>
                     {% if recent.seed_image == "" %}
                     <!-- Default image to be used if no image was added by the user -->
-                        <img class="seed-image" src="/static/images/default-image.jpg" alt="Seed Image">
+                    <img class="seed-image" src="/static/images/default-image.jpg" alt="Seed Image" />
                     {% else %}
                     <!-- Image added by user -->
-                        <img class="seed-image" src="{{ recent.seed_image }}" alt="Seed Image">
+                    <img class="seed-image" src="{{ recent.seed_image }}" alt="Seed Image" />
                     {% endif %}
                 </div>
-                </a>
-            </div>
+            </a>
+        </div>
         {% endfor %}
     </div>
 </div>
