--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,79 +6,76 @@
 {% block content %}
 
 <div class="container">
-        <!-- Message to user -->
-        <div class="center-align profile-heading">
-                <p>Hey <strong>{{username}}</strong>, you can keep track of all your seeds here. Feel free to edit or delete your
-                    current
-                    seeds or add even more.</p>
+    <!-- Message to user -->
+    <div class="center-align profile-heading">
+        <p>Hey <strong>{{username}}</strong>, you can keep track of all your seeds here. Feel free to edit or delete your current seeds or add even more.</p>
+    </div>
+    <div class="row profile">
+        <!-- Heading -->
+        <div class="col s12">
+            <h3 class="center-align">My Seeds</h3>
         </div>
-        <div class="row profile">
-            <!-- Heading -->
-            <div class="col s12">
-                <h3 class="center-align">My Seeds</h3>
-            </div>
-            <!-- Add seed button -->
-            <div class="fixed-action-btn">
-                <a href="{{ url_for('add_seed') }}" class="btn-floating btn-large waves-effect waves-light red"><i
-                        class="fas fa-plus-circle"></i></a>
-            </div>
+        <!-- Add seed button -->
+        <div class="fixed-action-btn">
+            <a href="{{ url_for('add_seed') }}" class="btn-floating btn-large waves-effect waves-light red"><i class="fas fa-plus-circle"></i></a>
         </div>
-        {% if seeds|length > 0 %}
-            <div class="row">
-                {% for seed in seeds if session.user|lower == seed.created_by|lower %}
-                    <div class="col s12 m4">
-                        <div class="card">
-                            <a href="{{ url_for('get_seed', seed_id=seed._id) }}">
-                                <div class="card-image">
-                                    {% if seed.seed_image == "" %}
-                                    <!-- Default image to be used if no image was added by the user -->
-                                    <img class="profile-seed-image" src="/static/images/default-image.jpg" alt="Seed Image">
-                                    {% else %}
-                                    <!-- Image added by user -->
-                                    <img class="profile-seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
-                                    {% endif %}
-                                </div>
-                            </a>
-                            <!-- Seed details card -->
-                            <div class="profile-card">
-                                <p>
-                                    <strong>Plant:</strong> {{ seed.seed_name }}
-                                    <br>
-                                    <strong>Plant Type:</strong> {{ seed.category_name }}
-                                    <br>
-                                    <strong>Created By:</strong> {{ seed.created_by }}
-                                </p>
-                            </div>
-                            <!-- Buttons -->
-                            <div class="profile-buttons">
-                                <a href="{{ url_for('edit_seed', seed_id=seed._id) }}" class="btn-floating waves-effect waves-light blue"><i class="fas fa-pencil-alt"></i></a>
-                                <button aria-label="delete button">
-                                    <a data-target="{{ seed._id }}" class="btn-floating modal-trigger waves-effect waves-light red"><i class="fas fa-trash"></i></a>
-                                </button>
-                            </div>
-                        </div>
+    </div>
+    {% if seeds|length > 0 %}
+    <div class="row">
+        {% for seed in seeds if session.user|lower == seed.created_by|lower %}
+        <div class="col s12 m4">
+            <div class="card">
+                <a href="{{ url_for('get_seed', seed_id=seed._id) }}">
+                    <div class="card-image">
+                        {% if seed.seed_image == "" %}
+                        <!-- Default image to be used if no image was added by the user -->
+                        <img class="profile-seed-image" src="/static/images/default-image.jpg" alt="Seed Image" />
+                        {% else %}
+                        <!-- Image added by user -->
+                        <img class="profile-seed-image" src="{{ seed.seed_image }}" alt="Seed Image" />
+                        {% endif %}
                     </div>
-                    <!-- Modal Structure -->
-                    <div id="{{ seed._id }}" class="modal">
-                        <div class="modal-content center-align">
-                            <h4>Are you sure that you want to delete this seed?</h4>
-                            <p>Click "Confirm" to delete or "Cancel" to go back.</p>
-                            <a href="{{ url_for('delete_seed', seed_id=seed._id) }}" class="waves-effect waves-light btn green">Confirm</a>
-                            <a class="waves-effect waves-light btn">Cancel</a>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
-        {% else %}
-        <!-- Message for user if they have not added any seeds -->
-        <div class="center-align row">
-            <div>
-                <p>You have no added any seeds yet!</p>
-                <p>Click <a href="{{ url_for('add_seed') }}">here</a> if you would like to add a seed.</p>
+                </a>
+                <!-- Seed details card -->
+                <div class="profile-card">
+                    <p>
+                        <strong>Plant:</strong> {{ seed.seed_name }}
+                        <br />
+                        <strong>Plant Type:</strong> {{ seed.category_name }}
+                        <br />
+                        <strong>Created By:</strong> {{ seed.created_by }}
+                    </p>
+                </div>
+                <!-- Buttons -->
+                <div class="profile-buttons">
+                    <a href="{{ url_for('edit_seed', seed_id=seed._id) }}" class="btn-floating waves-effect waves-light blue"><i class="fas fa-pencil-alt"></i></a>
+                    <button aria-label="delete button">
+                        <a data-target="{{ seed._id }}" class="btn-floating modal-trigger waves-effect waves-light red"><i class="fas fa-trash"></i></a>
+                    </button>
+                </div>
             </div>
         </div>
-        {% endif %}
+        <!-- Modal Structure -->
+        <div id="{{ seed._id }}" class="modal">
+            <div class="modal-content center-align">
+                <h4>Are you sure that you want to delete this seed?</h4>
+                <p>Click "Confirm" to delete or "Cancel" to go back.</p>
+                <a href="{{ url_for('delete_seed', seed_id=seed._id) }}" class="waves-effect waves-light btn green">Confirm</a>
+                <a class="waves-effect waves-light btn">Cancel</a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% else %}
+    <!-- Message for user if they have not added any seeds -->
+    <div class="center-align row">
+        <div>
+            <p>You have no added any seeds yet!</p>
+            <p>Click <a href="{{ url_for('add_seed') }}">here</a> if you would like to add a seed.</p>
+        </div>
+    </div>
+    {% endif %}
 </div>
-    
+
 
 {% endblock %}
