--- a/templates/register.html
+++ b/templates/register.html
@@ -5,44 +5,45 @@
 
 {% block content %}
 
-    <h3 class="center-align">Register</h3>
+<h3 class="center-align">Register</h3>
 
-    <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
-            <div class="card-panel">
-                <!-- Username -->
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-user-plus prefix"></i>
-                        <input id="username" name="username" type="text" minlength="5"
-                         maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="username">Username</label>
-                        <span class="helper-text" data-error="Your username must be between 5 and 15 characters long and must contain only letters and numbers." data-success="Looks great">Your username must be between 5 and 15 characters long and must contain only letters and numbers.</span>
-                    </div>
-                </div>
-                <!-- Password -->
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-user-lock prefix"></i>
-                        <input id="password" name="password" type="password" minlength="5"
-                         maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Password</label>
-                        <span class="helper-text" data-error="Your password must be between 5 and 15 characters long and must contain only letters and numbers." data-success="Looks great">Your password must be between 5 and 15 characters long and must contain only letters and numbers.</span>
-                    </div>
-                </div>
-                <!-- Register Button -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large green darken-3" aria-label="register button">Register <i class="fas fa-sign-in-alt"></i></button>
+<div class="row">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <div class="card-panel">
+            <!-- Username -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-user-plus prefix"></i>
+                    <input id="username" name="username" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required />
+                    <label for="username">Username</label>
+                    <span class="helper-text" data-error="Your username must be between 5 and 15 characters long and must contain only letters and numbers." data-success="Looks great">
+                        Your username must be between 5 and 15 characters long and must contain only letters and numbers.
+                    </span>
                 </div>
             </div>
-        </form>
-    </div>
-    <!-- Link to Log In page -->
-    <div class="row">
-        <div class="col s12">
-            <p class="center-align">
-                Already registered? <a href=" {{ url_for('login') }} ">Log In</a>
-            </p>
+            <!-- Password -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-user-lock prefix"></i>
+                    <input id="password" name="password" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required />
+                    <label for="password">Password</label>
+                    <span class="helper-text" data-error="Your password must be between 5 and 15 characters long and must contain only letters and numbers." data-success="Looks great">
+                        Your password must be between 5 and 15 characters long and must contain only letters and numbers.
+                    </span>
+                </div>
+            </div>
+            <!-- Register Button -->
+            <div class="row">
+                <button type="submit" class="col s12 btn-large green darken-3" aria-label="register button">Register <i class="fas fa-sign-in-alt"></i></button>
+            </div>
         </div>
+    </form>
+</div>
+<!-- Link to Log In page -->
+<div class="row">
+    <div class="col s12">
+        <p class="center-align">Already registered? <a href=" {{ url_for('login') }} ">Log In</a></p>
     </div>
+</div>
+
 {% endblock %}
