--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -5,6 +5,7 @@
 <div class="site-container">
     <div class="row">
         <h3 class="col s12 offset-l2 l8 center-align">{{ seed.seed_name|title }}</h3>
+        <!-- Edit and delete buttons -->
     {% if session.user|lower == seed.created_by|lower or session.user|lower == "admin" %}
         <div class="col s12 l2 edit-buttons">
             <div>
@@ -18,6 +19,7 @@
         </div>
     </div>
     {% endif %}
+    <!-- Seed details -->
     <div class="row">
         <div class="col s12 m6 grow-seed">
             {% if seed.seed_image == "" %}
@@ -36,6 +38,7 @@
     <div class="container">
         <div class="row">
             <div class="col s12 instructions">
+                <!-- Sowing Instructions -->
                 <div id="sowing-instructions">
                     <h4>Sowing Instructions</h4>
                     <hr>
@@ -45,6 +48,7 @@
                         {% endfor %}
                     </ul>
                 </div>
+                <!-- Growing Instructions -->
                 <div id="growing-instructions">
                     <h4>Growing Instructions</h4>
                     <hr>
@@ -55,6 +59,7 @@
                     </ul>
                 </div>
                 {% if seed.harvesting_instructions != "" %}
+                <!-- Harvesting Instructions -->
                     <div id="harvesting-instructions">
                         <h4>Harvesting Instructions</h4>
                         <hr>
@@ -68,6 +73,7 @@
             </div>
         </div>
     </div>
+    <!-- Delete modal -->
     <div id="modal1" class="modal">
         <div class="modal-content center-align">
             <h4>Are you sure that you want to delete this seed?</h4>
