add missing closing tag

--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -82,6 +82,7 @@
             <a href="{{ url_for('delete_seed', seed_id=seed._id) }}" class="modal-close btn waves-effect green white-text"><i
                     class="far fa-check-circle"></i> Confirm</a>
         </div>
+    </div>
 </div>
 
 {% endblock %}
